src/types/tests/snapshots/tgbot__types__tests__chat__chat_location.snap
---
source: src/types/tests/chat.rs
expression: "ChatLocation::new(\"Address\", Location::new(1.0, 0.0))"
---
{
  "address": "Address",
  "location": {
    "latitude": 1.0,
    "longitude": 0.0
  }
}
