src/types/tests/snapshots/tgbot__types__tests__chat__chat_member-2.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "status": "member",
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": false
  },
  "tag": "test",
  "until_date": 1
}
