src/types/tests/snapshots/tgbot__types__tests__chat__chat_member_admin-2.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "status": "administrator",
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": false
  },
  "can_be_edited": true,
  "can_change_info": false,
  "can_delete_messages": true,
  "can_invite_users": false,
  "can_manage_chat": true,
  "can_manage_video_chats": false,
  "can_promote_members": true,
  "can_restrict_members": true,
  "is_anonymous": false
}
