src/types/tests/snapshots/tgbot__types__tests__chat__chat_member_creator.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "status": "creator",
  "is_anonymous": false,
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": false
  },
  "custom_title": "Alpha"
}
