src/types/tests/snapshots/tgbot__types__tests__chat__chat_member_left.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "status": "left",
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": true
  }
}
