src/types/tests/snapshots/tgbot__types__tests__chat__chat_member_restricted-2.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "status": "restricted",
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": true
  },
  "can_add_web_page_previews": false,
  "can_change_info": true,
  "can_edit_tag": false,
  "can_invite_users": false,
  "can_manage_topics": false,
  "can_pin_messages": false,
  "can_react_to_messages": false,
  "can_send_audios": false,
  "can_send_documents": false,
  "can_send_messages": true,
  "can_send_other_messages": true,
  "can_send_photos": false,
  "can_send_polls": true,
  "can_send_video_notes": false,
  "can_send_videos": false,
  "can_send_voice_notes": false,
  "is_member": false,
  "until_date": 0
}
